--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,7 @@
         <maven-release-plugin.version>2.4.1</maven-release-plugin.version>
         <maven-source-plugin.version>2.2.1</maven-source-plugin.version>
         <owner.version>1.0.5</owner.version>
+        <pojo-mbean.version>1.1</pojo-mbean.version>
         <project.build.outputEncoding>UTF-8</project.build.outputEncoding>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -215,6 +216,11 @@
                 <groupId>com.google.inject.extensions</groupId>
                 <artifactId>guice-assistedinject</artifactId>
                 <version>${guice.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.softee</groupId>
+                <artifactId>pojo-mbean</artifactId>
+                <version>${pojo-mbean.version}</version>
             </dependency>
             <!-- TODO: Replace with Apache Onami release
             <dependency>
