--- a/guice/pom.xml
+++ b/guice/pom.xml
@@ -36,6 +36,10 @@
             <groupId>com.google.inject.extensions</groupId>
             <artifactId>guice-assistedinject</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.softee</groupId>
+            <artifactId>pojo-mbean</artifactId>
+        </dependency>
         <!-- TODO: Replace with Apache Onami release
         <dependency>
             <groupId>org.99soft.guice</groupId>
