--- a/guice/pom.xml
+++ b/guice/pom.xml
@@ -59,6 +59,10 @@
             <artifactId>metainf-services</artifactId>
         </dependency>
         <dependency>
+            <groupId>hm.binkley</groupId>
+            <artifactId>binkley-logging</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-ext</artifactId>
         </dependency>
