--- a/pom.xml
+++ b/pom.xml
@@ -130,17 +130,17 @@
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>binkley-guice</artifactId>
-                <version>${project.version</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>binkley-logging</artifactId>
-                <version>${project.version</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>binkley-mixin</artifactId>
-                <version>${project.version</version>
+                <version>${project.version}</version>
             </dependency>
 
             <dependency>
