--- a/pom.xml
+++ b/pom.xml
@@ -66,9 +66,11 @@
         <module>spring</module>
         <module>logging</module>
         <module>mixin</module>
+        <module>xprops</module>
     </modules>
 
     <properties>
+        <commons-lang3.version>3.2.1</commons-lang3.version>
         <guava.version>16.0.1</guava.version>
         <guice.version>3.0</guice.version>
         <hamcrest.version>1.3</hamcrest.version>
@@ -162,6 +164,11 @@
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons-lang3.version}</version>
             </dependency>
 
             <dependency>
