--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,7 @@
         <guava.version>17.0</guava.version>
         <guice.version>3.0</guice.version>
         <hamcrest.version>1.3</hamcrest.version>
+        <ini4j.version>0.5.2</ini4j.version>
         <janino.version>2.6.1</janino.version>
         <!-- TODO: Merge Eight branch when JDK8 releases -->
         <java.version>8</java.version>
@@ -283,6 +284,12 @@
                 <groupId>com.github.jnr</groupId>
                 <artifactId>jnr-posix</artifactId>
                 <version>${jnr.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.ini4j</groupId>
+                <artifactId>ini4j</artifactId>
+                <version>${ini4j.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
