--- a/finance/src/test/resources/hm/binkley/util/MoneyTest.ini
+++ b/finance/src/test/resources/hm/binkley/util/MoneyTest.ini
@@ -1,6 +1,9 @@
 [Missing currency]
 value = 1
 
+[Missing amount]
+value = USD
+
 [Single dollar, no whitespace]
 value = USD1
 currency = USD
@@ -12,11 +15,11 @@ currency = USD
 amount = 1.00
 
 [Single dollar, whitespace]
-value = USD 1
+value = USD\t1
 currency = USD
 amount = 1.00
 
 [Single dollar and no cents, whitespace]
-value = USD 1.00
+value = USD\t1.00
 currency = USD
 amount = 1.00
