--- a/finance/src/test/resources/hm/binkley/util/MoneyTest.ini
+++ b/finance/src/test/resources/hm/binkley/util/MoneyTest.ini
@@ -1,3 +1,12 @@
+; Format - INI file
+; Section title is description of test, used in reporting failure
+; value is the input to `Money.parse(String)`
+; IFF parsing should fail:
+;   - Do not provide currency/amount
+; IFF parsing should pass:
+;   - currency is input to `Currency.getInstance(String)`
+;   - amount is input is `new BigDecimal(String)`
+
 [Missing currency]
 value = 1
 
@@ -23,3 +32,21 @@ amount = 1.00
 value = USD\t1.00
 currency = USD
 amount = 1.00
+
+[Single negative dollar]
+value = USD-1
+currency = USD
+amount = -1.00
+
+[Single dollar, too many digits, roundable]
+value = USD1.000
+currency = USD
+amount = 1.00
+
+[Single dollar, too many digits, not roundable]
+value = USD1.001
+
+[MF SDR]
+value = XDR1
+currency = XDR
+amount = 1
