--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
         <module>spring</module>
         <module>logging</module>
         <module>mixin</module>
+        <module>testing</module>
         <module>xprops</module>
     </modules>
 
@@ -75,6 +76,7 @@
         <guava.version>17.0</guava.version>
         <guice.version>3.0</guice.version>
         <hamcrest.version>1.3</hamcrest.version>
+        <ini4j.version>0.5.2</ini4j.version>
         <janino.version>2.6.1</janino.version>
         <!-- TODO: Merge Eight branch when JDK8 releases -->
         <java.version>8</java.version>
@@ -237,6 +239,12 @@
                 <version>${lifegycle.version}</version>
             </dependency>
             -->
+
+            <dependency>
+                <groupId>org.ini4j</groupId>
+                <artifactId>ini4j</artifactId>
+                <version>${ini4j.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.springframework</groupId>
