Build testing jar as compile scope.

--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,12 @@
                 <artifactId>binkley-mixin</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>binkley-testing</artifactId>
+                <version>${project.version}</version>
+                <scope>test</scope>
+            </dependency>
 
             <dependency>
                 <groupId>javax.inject</groupId>
