--- a/xprops/pom.xml
+++ b/xprops/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>hm.binkley</groupId>
         <artifactId>binkley-blog</artifactId>
-        <version>0.2-SNAPSHOT</version>
+        <version>0.2</version>
     </parent>
 
     <artifactId>binkley-xprops</artifactId>
