--- a/value-type/pom.xml
+++ b/value-type/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>hm.binkley</groupId>
         <artifactId>binkley-blog</artifactId>
-        <version>0.2</version>
+        <version>0.3-SNAPSHOT</version>
     </parent>
 
     <artifactId>binkley-value-type</artifactId>
