--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,7 @@
         <module>spring</module>
         <module>mixin</module>
         <module>value-type</module>
+        <module>xio</module>
         <module>xprops</module>
         <module>finance</module>
     </modules>
