fuller stacktrace; more startup info.

--- a/logging/src/main/resources/osi-logback-styles.properties
+++ b/logging/src/main/resources/osi-logback-styles.properties
@@ -11,4 +11,4 @@ zulu-timestamp=%date{yyyy-MM-dd'T'HH:mm:ss.SSS'Z',UTC}
 mark-or-level=%match{WITH_MARKER,%marker/%level,%level}
 editor-link=%class.%method\\(%file:%line\\)
 # Styles
-standard=${zulu-timestamp} ${mark-or-level} [%thread] [${editor-link}] %logger - %message%n
+standard=${zulu-timestamp} ${mark-or-level} [%thread] [${editor-link}] %logger - %message%n%xException{full}
