Rename settings to *Resource from *File.
This is more correct, and should be more clear as well.

--- a/logging/src/main/resources/osi-logback.properties
+++ b/logging/src/main/resources/osi-logback.properties
@@ -28,7 +28,7 @@
 # As an alternative to setting system properties, configure OSI logback here
 # These properties cannot, however, override these from system properties which are used before
 # this file is loaded:
-#   * logback.configurationFile
+#   * logback.configurationResource
 #   * logback.propertiesResource
 #   * logback.debug
 
