--- a/logging/src/main/resources/osi-logback.properties
+++ b/logging/src/main/resources/osi-logback.properties
@@ -28,7 +28,7 @@
 # As an alternative to setting system properties, configure OSI logback here
 # These properties cannot, however, override these from system properties which are used before
 # this file is loaded:
-#   * logback.configurationResource
+#   * logback.configurationFile
 #   * logback.propertiesResource
 #   * logback.debug
 
