--- a/pom.xml
+++ b/pom.xml
@@ -69,17 +69,18 @@
         <module>mixin</module>
         <module>value-type</module>
         <module>xio</module>
+        <module>xml</module>
         <module>xprops</module>
         <module>finance</module>
     </modules>
 
     <properties>
         <commons-lang3.version>3.3.2</commons-lang3.version>
-        <guava.version>16.0.1</guava.version>
         <guava.version>17.0</guava.version>
         <guice.version>3.0</guice.version>
         <hamcrest.version>1.3</hamcrest.version>
         <ini4j.version>0.5.2</ini4j.version>
+        <intellij.version>12.0</intellij.version>
         <janino.version>2.6.1</janino.version>
         <!-- TODO: Merge Eight branch when JDK8 releases -->
         <java.version>8</java.version>
@@ -113,6 +114,13 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.intellij</groupId>
+            <artifactId>annotations</artifactId>
+            <version>${intellij.version}</version>
+            <scope>compile</scope>
+            <optional>true</optional>
+        </dependency>
         <dependency>
             <groupId>com.google.code.findbugs</groupId>
             <artifactId>jsr305</artifactId>
@@ -161,6 +169,16 @@
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>binkley-value-type</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>binkley-xio</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>binkley-xml</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
