--- a/util/pom.xml
+++ b/util/pom.xml
@@ -16,12 +16,22 @@
         <version>0.3-SNAPSHOT</version>
     </parent>
 
-    <artifactId>binkley-xio</artifactId>
+    <artifactId>binkley-util</artifactId>
 
     <dependencies>
         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+        </dependency>
+        <!-- Blame Spring -->
+        <dependency>
             <groupId>hm.binkley</groupId>
-            <artifactId>binkley-util</artifactId>
+            <artifactId>binkley-logging</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
