--- a/xml/pom.xml
+++ b/xml/pom.xml
@@ -20,17 +20,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-core</artifactId>
-        </dependency>
-        <!-- Blame Spring -->
-        <dependency>
             <groupId>hm.binkley</groupId>
-            <artifactId>binkley-logging</artifactId>
+            <artifactId>binkley-util</artifactId>
         </dependency>
     </dependencies>
 </project>
