--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
 
     <properties>
         <commons-lang3.version>3.3.2</commons-lang3.version>
+        <freemarker.version>2.3.20</freemarker.version>
         <guava.version>17.0</guava.version>
         <guice.version>3.0</guice.version>
         <hamcrest.version>1.3</hamcrest.version>
@@ -341,6 +342,12 @@
                 <groupId>com.github.jnr</groupId>
                 <artifactId>jnr-posix</artifactId>
                 <version>${jnr.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.freemarker</groupId>
+                <artifactId>freemarker</artifactId>
+                <version>${freemarker.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
