--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,7 @@
         <janino.version>2.6.1</janino.version>
         <!-- TODO: Merge Eight branch when JDK8 releases -->
         <java.version>8</java.version>
+        <jmockit.version>1.7</jmockit.version>
         <jnr.version>3.0.1</jnr.version>
         <jopt-simple.version>4.6</jopt-simple.version>
         <jsr305.version>2.0.3</jsr305.version>
@@ -136,6 +137,12 @@
             <version>${lombok.version}</version>
             <scope>compile</scope>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>com.googlecode.jmockit</groupId>
+            <artifactId>jmockit</artifactId>
+            <version>${jmockit.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
