--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,7 @@
         <module>spring</module>
         <module>mixin</module>
         <module>util</module>
+        <module>convert</module>
         <module>value-type</module>
         <module>xio</module>
         <module>xml</module>
@@ -168,6 +169,11 @@
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>binkley-logging</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>binkley-convert</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
