--- a/xml/pom.xml
+++ b/xml/pom.xml
@@ -25,7 +25,7 @@
         </dependency>
         <dependency>
             <groupId>hm.binkley</groupId>
-            <artifactId>binkley-util</artifactId>
+            <artifactId>binkley-convert</artifactId>
         </dependency>
         <dependency>
             <groupId>org.kohsuke.metainf-services</groupId>
