--- a/testing/pom.xml
+++ b/testing/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>hm.binkley</groupId>
         <artifactId>binkley-blog</artifactId>
-        <version>0.3</version>
+        <version>0.4-SNAPSHOT</version>
     </parent>
 
     <artifactId>binkley-testing</artifactId>
