--- a/xml/pom.xml
+++ b/xml/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>hm.binkley</groupId>
         <artifactId>binkley-blog</artifactId>
-        <version>0.3</version>
+        <version>0.4-SNAPSHOT</version>
     </parent>
 
     <artifactId>binkley-xml</artifactId>
