--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,8 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+         http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -112,20 +113,10 @@
         <project.reporting.sourceEncoding>UTF-8</project.reporting.sourceEncoding>
         <service-binder.version>0.3</service-binder.version>
         <slf4j.version>1.7.7</slf4j.version>
-        <splunk.version>1.3.0</splunk.version>
-        <splunklogging.version>1.0-SNAPSHOT</splunklogging.version>
         <spring.version>4.1.0.RELEASE</spring.version>
         <system-rules.version>1.6.0</system-rules.version>
         <versions-maven-plugin.version>2.1</versions-maven-plugin.version>
     </properties>
-
-    <repositories>
-        <!-- Splunk doesn't believe in Maven central, no, really -->
-        <repository>
-            <id>ext-release-local</id>
-            <url>http://splunk.artifactoryonline.com/splunk/ext-releases-local</url>
-        </repository>
-    </repositories>
 
     <dependencies>
         <dependency>
@@ -294,16 +285,6 @@
                 <groupId>org.slf4j</groupId>
                 <artifactId>jul-to-slf4j</artifactId>
                 <version>${slf4j.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.splunk</groupId>
-                <artifactId>splunk</artifactId>
-                <version>${splunk.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.splunk</groupId>
-                <artifactId>logging</artifactId>
-                <version>${splunklogging.version}</version>
             </dependency>
 
             <dependency>
