Logging needs Java 7, not 8.

--- a/logging/pom.xml
+++ b/logging/pom.xml
@@ -17,6 +17,10 @@
 
     <artifactId>binkley-logging</artifactId>
 
+    <properties>
+        <java.version>7</java.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>javax.inject</groupId>
