--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: java
 jdk:
     - oraclejdk8
-install: mvn install -DskipTests=true -Dgpg.skip=true
-script: mvn verify -Dgpg.skip=true
+install: mvn clean install -DskipTests=true -Dgpg.skip=true
+script: mvn clean verify -Dgpg.skip=true
