--- a/pom.xml
+++ b/pom.xml
@@ -428,6 +428,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>${maven-failsafe-plugin.version}</version>
+                <configuration>
+                    <enableAssertions>true</enableAssertions>
+                    <forkCount>1</forkCount>
+                    <reuseForks>false</reuseForks>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
