--- a/pom.xml
+++ b/pom.xml
@@ -509,6 +509,8 @@
                         <goals>
                             <goal>jar</goal>
                             <goal>test-jar</goal>
+                            <goal>aggregate</goal>
+                            <goal>test-aggregate</goal>
                         </goals>
                     </execution>
                 </executions>
