--- a/pom.xml
+++ b/pom.xml
@@ -484,14 +484,19 @@
                             <addExtensions>true</addExtensions>
                         </manifest>
                     </archive>
+                    <author>true</author>
+                    <charset>UTF-8</charset>
                     <detectLinks>true</detectLinks>
+                    <keywords>true</keywords>
                     <linksource>true</linksource>
                     <links>
                         <link>http://docs.guava-libraries.googlecode.com/git-history/v${guava.version}/javadoc/</link>
                         <link>http://findbugs.sourceforge.net/api/</link>
                         <link>http://google.github.io/guice/api-docs/${guice.version}/javadoc/</link>
+                        <link>http://hamcrest.org/JavaHamcrest/javadoc/${hamcrest.version}/</link>
                         <link>http://owner.newinstance.it/${owner.version}/apidocs/</link>
                         <link>http://pholser.github.io/jopt-simple/apidocs/</link>
+                        <link>http://projectlombok.org/api/</link>
                         <link>http://slf4j.org/api/</link>
                     </links>
                     <tags>
@@ -501,6 +506,8 @@
                             <head>Pending:</head>
                         </tag>
                     </tags>
+                    <use>true</use>
+                    <version>true</version>
                 </configuration>
                 <executions>
                     <execution>
