--- a/logging/src/main/resources/osi-logback-styles.properties
+++ b/logging/src/main/resources/osi-logback-styles.properties
@@ -32,4 +32,4 @@ zulu-timestamp=%date{yyyy-MM-dd'T'HH:mm:ss.SSS'Z',UTC}
 mark-or-level=%match{WITH_MARKER,%marker/%level,%level}
 editor-link=%class.%method\\(%file:%line\\)
 # Styles
-standard=${zulu-timestamp} %contextName ${mark-or-level} [%thread] [${editor-link}] %logger - %message%n%xException{full}
+standard=${zulu-timestamp} \\(%timezone\\) %contextName ${mark-or-level} [%thread] [${editor-link}] %logger - %message%n%xException{full}
