--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: java
 jdk:
     - oraclejdk8
-install: mvn clean install -Dmaven.javadoc.skip=true -DskipTests=true -Dgpg.skip=true
-script: mvn clean verify -Dmaven.javadoc.skip=true -Dgpg.skip=true
+install: mvn install -Dmaven.javadoc.skip=true -DskipTests=true -Dgpg.skip=true
+script: mvn verify -Dmaven.javadoc.skip=true -Dgpg.skip=true
