--- a/xio/pom.xml
+++ b/xio/pom.xml
@@ -20,7 +20,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>hm.binkley</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>binkley-util</artifactId>
         </dependency>
     </dependencies>
