--- a/xml/pom.xml
+++ b/xml/pom.xml
@@ -20,11 +20,11 @@
 
     <dependencies>
         <dependency>
-            <groupId>hm.binkley</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>binkley-logging</artifactId>
         </dependency>
         <dependency>
-            <groupId>hm.binkley</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>binkley-convert</artifactId>
         </dependency>
         <dependency>
