--- a/pom.xml
+++ b/pom.xml
@@ -40,12 +40,12 @@
 
     <issueManagement>
         <system>Github</system>
-	<url>https://github.com/binkley/binkley/issues</url>
+        <url>https://github.com/binkley/binkley/issues</url>
     </issueManagement>
 
     <ciManagement>
         <system>Travis</system>
-	<url>https://travis-ci.org/binkley/binkley</url>
+        <url>https://travis-ci.org/binkley/binkley</url>
     </ciManagement>
 
     <scm>
@@ -108,6 +108,7 @@
         <maven-clean-plugin.version>2.5</maven-clean-plugin.version>
         <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
         <maven-dependency-plugin.version>2.8</maven-dependency-plugin.version>
+        <maven-enforcer-plugin.version>1.3.1</maven-enforcer-plugin.version>
         <maven-failsafe-plugin.version>2.17</maven-failsafe-plugin.version>
         <maven-gpg-plugin.version>1.4</maven-gpg-plugin.version>
         <maven-jar-plugin.version>2.4</maven-jar-plugin.version>
@@ -405,6 +406,11 @@
                 <version>${versions-maven-plugin.version}</version>
             </plugin>
             <plugin>
+                <!-- Sonatype OSS parent pom breaks intermodule dependencies otherwise -->
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <version>${maven-enforcer-plugin.version}</version>
+            </plugin>
+            <plugin>
                 <artifactId>maven-clean-plugin</artifactId>
                 <version>${maven-clean-plugin.version}</version>
             </plugin>
@@ -507,9 +513,12 @@
                     <keywords>true</keywords>
                     <linksource>true</linksource>
                     <links>
-                        <link>http://docs.guava-libraries.googlecode.com/git-history/v${guava.version}/javadoc/</link>
+                        <link>
+                            http://docs.guava-libraries.googlecode.com/git-history/v${guava.version}/javadoc/
+                        </link>
                         <link>http://findbugs.sourceforge.net/api/</link>
-                        <link>http://google.github.io/guice/api-docs/${guice.version}/javadoc/</link>
+                        <link>http://google.github.io/guice/api-docs/${guice.version}/javadoc/
+                        </link>
                         <link>http://hamcrest.org/JavaHamcrest/javadoc/${hamcrest.version}/</link>
                         <link>http://owner.newinstance.it/${owner.version}/apidocs/</link>
                         <link>http://pholser.github.io/jopt-simple/apidocs/</link>
