--- a/util/pom.xml
+++ b/util/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>hm.binkley</groupId>
         <artifactId>binkley-blog</artifactId>
-        <version>0.4</version>
+        <version>0.5-SNAPSHOT</version>
     </parent>
 
     <artifactId>binkley-util</artifactId>
