--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,7 @@
         <module>mixin</module>
         <module>util</module>
         <module>convert</module>
+        <module>corba</module>
         <module>value-type</module>
         <module>xio</module>
         <module>xml</module>
@@ -88,8 +89,10 @@
         <guava.version>18.0</guava.version>
         <guice.version>3.0</guice.version>
         <hamcrest.version>1.3</hamcrest.version>
+        <idlj-maven-plugin.version>1.2.1</idlj-maven-plugin.version>
         <ini4j.version>0.5.2</ini4j.version>
         <intellij.version>12.0</intellij.version>
+        <jacorb.version>3.5</jacorb.version>
         <janino.version>2.7.6</janino.version>
         <jansi.version>1.11</jansi.version>
         <java.version>8</java.version>
@@ -328,6 +331,29 @@
                 <version>${lifegycle.version}</version>
             </dependency>
             -->
+            <dependency>
+                <groupId>org.jacorb</groupId>
+                <artifactId>jacorb</artifactId>
+                <version>${jacorb.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>slf4j-jdk14</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>org.jacorb</groupId>
+                <artifactId>jacorb-services</artifactId>
+                <version>${jacorb.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>slf4j-jdk14</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+
 
             <dependency>
                 <groupId>org.ini4j</groupId>
@@ -413,6 +439,46 @@
             <plugin>
                 <artifactId>maven-dependency-plugin</artifactId>
                 <version>${maven-dependency-plugin.version}</version>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>idlj-maven-plugin</artifactId>
+                <version>${idlj-maven-plugin.version}</version>
+                <configuration>
+                    <compiler>jacorb</compiler>
+                    <debug>true</debug>
+                    <sources>
+                        <source>
+                            <additionalArguments>
+                                <addionalArgument>-all</addionalArgument>
+                            </additionalArguments>
+                        </source>
+                    </sources>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>idlj-generate-sources</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>idlj-generate-test-sources</id>
+                        <phase>generate-test-sources</phase>
+                        <goals>
+                            <goal>generate-test</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.jacorb</groupId>
+                        <artifactId>jacorb-idl-compiler</artifactId>
+                        <version>${jacorb.version}</version>
+                        <scope>compile</scope>
+                    </dependency>
+                </dependencies>
             </plugin>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
