Mixin moved packages.

--- a/corba/pom.xml
+++ b/corba/pom.xml
@@ -21,7 +21,7 @@
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>binkley-util</artifactId>
+            <artifactId>binkley-mixin</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
