Like stream generator but with termination.

--- a/util/pom.xml
+++ b/util/pom.xml
@@ -17,4 +17,11 @@
     </parent>
 
     <artifactId>binkley-util</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+    </dependencies>
 </project>
