--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
         <module>util</module>
         <module>convert</module>
         <module>corba</module>
+        <module>lombok</module>
         <module>value-type</module>
         <module>xio</module>
         <module>xml</module>
