--- a/util/pom.xml
+++ b/util/pom.xml
@@ -23,5 +23,10 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
+        <dependency>
+            <groupId>hm.binkley</groupId>
+            <artifactId>binkley-testing</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
