--- a/convert/pom.xml
+++ b/convert/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>hm.binkley</groupId>
         <artifactId>binkley-blog</artifactId>
-        <version>0.5-SNAPSHOT</version>
+        <version>0.5</version>
     </parent>
 
     <artifactId>binkley-convert</artifactId>
