--- a/lombok/pom.xml
+++ b/lombok/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>hm.binkley</groupId>
         <artifactId>binkley-blog</artifactId>
-        <version>0.5-SNAPSHOT</version>
+        <version>0.5</version>
     </parent>
 
     <artifactId>binkley-lombok</artifactId>
