--- a/xml/pom.xml
+++ b/xml/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>hm.binkley</groupId>
         <artifactId>binkley-blog</artifactId>
-        <version>0.5</version>
+        <version>0.6-SNAPSHOT</version>
     </parent>
 
     <artifactId>binkley-xml</artifactId>
