--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,7 @@
 
     <properties>
         <commons-lang3.version>3.3.2</commons-lang3.version>
+        <corn-cps.version>1.1.7</corn-cps.version>
         <freemarker.version>2.3.21</freemarker.version>
         <guava.version>18.0</guava.version>
         <guice.version>3.0</guice.version>
@@ -102,7 +103,8 @@
         <jansi.version>1.11</jansi.version>
         <java.charset>UTF-8</java.charset>
         <java.version>8</java.version>
-        <jgitflow-maven-plugin.version>1.0-m4.3</jgitflow-maven-plugin.version>
+        <jgitflow-maven-plugin.version>1.0-m4.3
+        </jgitflow-maven-plugin.version>
         <jmockit.version>1.7</jmockit.version>
         <jnr.version>3.0.9</jnr.version>
         <jopt-simple.version>4.8</jopt-simple.version>
@@ -389,6 +391,12 @@
                 <version>${ini4j.version}</version>
             </dependency>
 
+            <!-- Lighter than Spring Core -->
+            <dependency>
+                <groupId>net.sf.corn</groupId>
+                <artifactId>corn-cps</artifactId>
+                <version>${corn-cps.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-core</artifactId>
